fix: header position on mobile

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -5,12 +5,16 @@
   background-color: var(--clr-bg);
 }
 
-.spacer {
+.spacerTop, .spacerBottom {
   height: 3em
 }
 
 @media (max-width: 600px) {
-  .spacer {
-    height: 2em;
+  .spacerTop {
+    height: 0;
+  }
+
+  .spacerBottom {
+    height: 1em;
   }
 }
